fix: modal scrollbar only if content is scrollable (#78)

--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -47,6 +47,7 @@
         flex-direction: column;
         overflow-y: scroll;
         flex: 1;
+        line-height: normal;
     }
 
     .footer {
